Fix for horizontal rule spacing.

--- a/css/tdl_sidekick_responsive.css
+++ b/css/tdl_sidekick_responsive.css
@@ -146,6 +146,27 @@ sup {
     overflow-x: hidden;
 }
 
+::-webkit-scrollbar {
+    width: 7px;
+}
+
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+    background: rgba(45, 62, 80, 0.9);
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+}
+
+::-webkit-scrollbar-thumb:window-inactive {
+    background: rgba(225, 225, 225, 0.75);
+}
+
 /* Dropdown bubble arrow */
 .dropdown .container:before, .dropdown .container:after {
     content: "";
@@ -167,6 +188,7 @@ sup {
     border-right: 4px solid transparent;
     right: 9px;
 }
+
 /* END Dropdown bubble arrow */
 
 [tooltip]:before {
